# Minima

./: .gitignore  LICENSE  README.md  plan.md
data/: README.md  download.py  preprocess.py  train_tokenizer.py
inference/engine/: CMakeLists.txt  inference.cpp  inference.hpp
tokenizer/: CMakeLists.txt  bpe.py  encode.py  mock_tokenizer.py  vocab.py
tokenizer/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tokenizer_cpp.slnx  tokenizer_cpp.vcxproj  tokenizer_cpp.vcxproj.filters
tokenizer/build2/Release/: tokenizer_cpp.exp
tokenizer/build2/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_bpe.vcxproj  test_bpe.vcxproj.filters
tokenizer/build2/tests/test_bpe.dir/Release/: test_bpe.exe.recipe
tokenizer/build2/tests/test_bpe.dir/Release/test_bpe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_bpe.lastbuildstate
tokenizer/build2/tokenizer_cpp.dir/Release/: tokenizer_cpp.cp311-win_amd64.pyd.recipe
tokenizer/build2/tokenizer_cpp.dir/Release/tokenizer_cpp.tlog/: CL.26984.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tokenizer/build2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
tokenizer/build2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
tokenizer/src/: bindings.cpp  bpe.cpp  bpe.hpp
tokenizer/tests/: CMakeLists.txt  test_bpe.cpp  test_roundtrip.py
(+38 files in other folders)
